--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body class="bg-primary text-white text-center">
     <div class="container mt-5">
         <h1>Welcome to the Voting System</h1>
-        <p><a href="/login" class="btn btn-light">Login with Google</a></p>
+        <p>
+            <a href="https://africavotes.com/auth/google" class="btn btn-light">
+                Login with Google
+            </a>
+        </p>
     </div>
 </body>
 </html>
