--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Welcome to the Voting System</h1>
         <p>
             <a href="https://africavotes.com/auth/google" class="btn btn-light">
-                Login with Google
+                Login
             </a>
         </p>
     </div>
